TFP-5292 ikke kopier avslåtte perioder etter endringsdato